service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-tracker-service
spec:
  type: NodePort
  selector:
    app: health-tracker
  ports:
    - port: 80
      targetPort: 8000
      # nodePort: 30110
