deployment.yaml
# ============================================================
# Namespace
# ============================================================
apiVersion: v1
kind: Namespace
metadata:
  name: "2401008"

---
# ============================================================
# Deployment
# ============================================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-tracker-deployment
  namespace: "2401008"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-tracker
  template:
    metadata:
      labels:
        app: health-tracker
    spec:
      imagePullSecrets:
        - name: nexus-secret
      containers:
        - name: health-tracker
          image: nexus-service-for-docker-hosted-registry.nexus.svc.cluster.local:8085/2401008_sam/health-tracker:v2
          ports:
            - containerPort: 8000

---
# ============================================================
# Service
# ============================================================
apiVersion: v1
kind: Service
metadata:
  name: health-tracker-service
  namespace: "2401008"
spec:
  selector:
    app: health-tracker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP

---
# ============================================================
# Ingress
# ============================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-tracker-ingress
  namespace: "2401008"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: health-tracker.imcc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: health-tracker-service
                port:
                  number: 80
